--- a/style.css
+++ b/style.css
@@ -12954,11 +12954,11 @@ body.sticky--header #masthead {
       padding-top: 40px;
       padding-bottom: 40px;
       max-height: 800px;
-      overflow: auto;
-      margin-left: var(--margin, 92.5px); }
+      overflow: auto; }
       @media screen and (min-width: 992px) {
         .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores {
-          padding-left: 12px; } }
+          padding-left: 12px;
+          margin-left: var(--margin, 92.5px); } }
       .dealer--locator--holder .dealer--locator #wpsl-wrap #wpsl-result-list #wpsl-stores ul li {
         padding: 0;
         border-bottom: 1px solid #000;
