--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -155,3 +155,11 @@ body {
         }
     }
 }
+
+
+.mega-menu--not-active {
+    .mega-menu--right {
+        opacity: 0;
+        visibility: hidden;
+    }
+}
