--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -70,8 +70,7 @@ body {
 }
 
 #offCanvasMenu {
-    background-color: transparent;
-        border: none;
+    border: none;
     .container {
         padding: 0 !important;
     }
@@ -105,6 +104,9 @@ body {
         max-width: 230px;
         margin-left: auto;
         margin-right: auto;
+    }
+    @include responsive(md-lg) {
+        background-color: transparent;
     }
 }
 .svg-logo.svg-logo {
@@ -158,9 +160,14 @@ body {
     }
 }
 
-.mega-menu--not-active {
-    .mega-menu--right {
-        opacity: 0;
-        visibility: hidden;
+@include responsive(md-lg) {
+    .mega-menu--not-active {
+        .mega-menu--right {
+            opacity: 0;
+            visibility: hidden;
+        }
+        .btn-close.btn-close {
+            left: 500px;
+        }
     }
 }
