--- a/assets/stylesheets/sections/_header.scss
+++ b/assets/stylesheets/sections/_header.scss
@@ -160,7 +160,7 @@ body {
     }
 }
 
-@include responsive(md-lg) {
+@include responsive(sm-lg) {
     .mega-menu--not-active {
         .mega-menu--right {
             opacity: 0;
