--- a/style.css
+++ b/style.css
@@ -12844,7 +12844,7 @@ body.sticky--header #masthead {
     overflow: auto !important; }
   #offCanvasMenu .listings-taxonomy-holder {
     max-width: 100%; } }
-@media screen and (min-width: 992px) {
+@media (min-width: 768px) {
   .mega-menu--not-active .mega-menu--right {
     opacity: 0;
     visibility: hidden; }
