--- a/style.css
+++ b/style.css
@@ -13073,6 +13073,15 @@ body.sticky--header #masthead {
 .dealer--details .listings--posts {
   display: block !important; }
 
+.specifications {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 40px; }
+  .specifications .specification {
+    display: flex;
+    align-items: center;
+    width: calc(50%- 20px); }
+
 .swiper-slider-holder .swiper-pagination-holder {
   position: absolute;
   bottom: 50px;
