--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -291,11 +291,16 @@
 .specifications {
     display: flex;
     flex-wrap: wrap;
-    gap: 40px;
+    column-gap: 40px;
     .specification {
         display: flex;
         align-items: center;
         width: calc(50% - 20px);
-        flex: 0 0 auto;
+        border-top: 1px solid;
+        border-bottom: 1px solid;
+        margin-top: -1px;
+        padding: 10px 0;
+        justify-content: space-between;
+        gap: 20px;
     }
 }
