--- a/style.css
+++ b/style.css
@@ -13074,6 +13074,7 @@ body.sticky--header #masthead {
   display: block !important; }
 
 .specifications {
+  margin-top: 40px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 40px; }
