--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -303,5 +303,8 @@
         padding: 10px 0;
         justify-content: space-between;
         gap: 20px;
+        @media(max-width: 991px) {
+            width: 100%;
+        }
     }
 }
