--- a/assets/stylesheets/sections/_sections.scss
+++ b/assets/stylesheets/sections/_sections.scss
@@ -290,6 +290,7 @@
 
 .specifications {
     margin-top: 40px;
+    margin-bottom: 40px;
     display: flex;
     flex-wrap: wrap;
     column-gap: 40px;
