--- a/style.css
+++ b/style.css
@@ -13075,6 +13075,7 @@ body.sticky--header #masthead {
 
 .specifications {
   margin-top: 40px;
+  margin-bottom: 40px;
   display: flex;
   flex-wrap: wrap;
   column-gap: 40px; }
