--- a/style.css
+++ b/style.css
@@ -11929,10 +11929,21 @@ img {
 
 .tick-icon {
   text-align: center; }
-  .tick-icon svg {
-    width: 22px;
-    height: 22px;
-    color: green; }
+  .tick-icon:before {
+    content: "";
+    display: inline-block;
+    width: 14px;
+    height: 7px;
+    border-left: 2px solid var(--maroon);
+    border-bottom: 2px solid var(--maroon);
+    -webkit-transform: rotate(-45deg);
+    -moz-transform: rotate(-45deg);
+    -ms-transform: rotate(-45deg);
+    -o-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+    position: absolute;
+    left: 0;
+    top: 6px; }
 
 @media (min-width: 1500px) {
   .container {
