--- a/assets/stylesheets/base/_base.scss
+++ b/assets/stylesheets/base/_base.scss
@@ -838,9 +838,16 @@ img {
 
 .tick-icon {
     text-align: center;
-    svg {
-        width: 22px;
-        height: 22px;
-        color: green;
+    @include before {
+        content: "";
+        display: inline-block;
+        width: 14px;
+        height: 7px;
+        border-left: 2px solid var(--maroon);
+        border-bottom: 2px solid var(--maroon);
+        @include transform(rotate(-45deg));
+        position: absolute;
+        left: 0;
+        top: 6px;
     }
 }
